# transaksi-nasabah

./: .gitignore  Caddyfile  DesaPintarAPI-210109.json  Pipfile  README.md  manage.py  pyproject.toml  requirements.txt  supervisord.conf
.github/workflows/: deploy.yml
api_sad_sig/: .env  asgi.py  settings.py  urls.py  util.py  wsgi.py
api_sad_sig/v1/: admin.py  models.py  serializers.py  urls.py  views.py
layananperistiwa/: admin.py  apps.py  models.py  serializers.py  surat_serializers.py  urls.py  utils.py  utils1.py  views.py
layananperistiwa/migrations/: 0001_initial.py  0002_auto_20210329_1517.py  0002_sadpecahkk.py  0003_auto_20210127_0658.py  0003_auto_20210329_1531.py  0004_auto_20210127_0707.py  0004_auto_20210329_1536.py  0005_auto_20210329_1543.py  0005_sadlahirmati_nama.py  0006_auto_20210204_0952.py  0006_auto_20210329_1545.py  0007_auto_20210217_1151.py  0007_layanansurat.py  0007_sadkelahiran_penduduk.py  0008_auto_20210211_1713.py  0008_auto_20210215_1009.py  0009_merge_20210215_1127.py
mail_templates/: monografi.html  skck.html  skd.html  skl.html  triwulan_kelahiran.html  triwulan_kematian.html
mail_templates/layanan/: bagi_warisan.html  base.html  base_no_header.html  bedanama.html  belummenikah.html  biayapemakaman.html  bntl.html  bukunikah.html  domisili.html  dudajanda.html  izinkeramaian.html  izinpesta.html  kaw_nontunggal.html  kaw_tunggal.html  kehilangan.html  kelahiran.html  (+19 more)
users/: permissions.py  serializers.py  urls.py  views.py
v1/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
(+222 files in other folders)
